--- a/SunPathDiagram/app/src/main/res/layout/activity_plot.xml
+++ b/SunPathDiagram/app/src/main/res/layout/activity_plot.xml
@@ -1,18 +1,24 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PlotActivity">
+    xmlns:apgraph="http://schemas.android.com/apk/res-auto"
+    tools:context=".PlotActivity"
+    android:id="@+id/xy">
     <com.androidplot.xy.XYPlot
         android:id="@+id/plot"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         label="A Simple XY Plot"
         rangeLabel="range"
         domainLabel="domain"
         borderColor="#000000"
         backgroundColor="#000000"
-        graphBackgroundColor="#000000"
+        BackgroundColor="#ffffff"
         gridBackgroundColor="#111111"
         labelTextSize="20sp"
+        rangeLabelTextSize="28sp"
+        domainLabelTextSize="28sp"
+        legendTextSize="25sp"
         />
 </RelativeLayout>
