--- a/SunPathDiagram/app/src/main/res/values/colors.xml
+++ b/SunPathDiagram/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#faef6c00</color>
+    <color name="colorPrimaryDark">#e65100</color>
+    <color name="colorAccent">#d3000000</color>
+    <color name="primary_text_material_light">#d0040404</color>
+    <color name="foreground_material_light">#ffffff</color>
 </resources>
